moved kriska's title, changed Gabby's name

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
       </li>
       <li>
         <a href="#a-future" >
-          a future, maybe</a><span class="author"> &mdash; Gabby Bonifiglio</span>
+          a future, maybe</a><span class="author"> &mdash; Gabby Bonfiglio</span>
       </li>
     </ul>
 
@@ -298,16 +298,16 @@
   </section>
 
   <section class="cd-section" id="spectacle_of_black_life">
-    <br>
-    <p>My least favorite icebreaker is the one where you go around in a circle and share what superpower you would choose to develop if you could, what superhuman ability you would will into your existence if given the chance. I nearly always choose mindreading because, admittedly, never knowing what other people are thinking is the Anthony Davis in the NBA All-Star game of sources of my anxiety. Yet, I&rsquo;ve always found myself in icebreaker situations with people whose superpower of choice is invisibility. It&rsquo;s funny&mdash;invisibility is the superpower I never got to choose.</p>
-    <p>To be in my skin&mdash;to be a fat, mentally-ill, poor, Black woman&mdash;is to be both hypervisible and invisible, to be seen but never truly <em>seen</em>, never quite human, heard but never quite understood. It&rsquo;s not that I think all White people see me and see the demon that Darren Wilson saw when he murdered Michael Brown; it&rsquo;s more so that Black people in the liberal White imagination are still more enigma than human. Black people in the liberal White imagination are still the code that needs to be cracked, objects lost in translation. After the murder of Walter Scott, Brittany Cooper wrote about what she calls &ldquo;the spectacle of Black death,&rdquo; the cultural phenomenon of Black people nationwide scrolling through their Facebook friends&rsquo; vacation photos in the same breath as videos of Black people being slain in the street. Yet, I&rsquo;ve come to know that not only is Black death a spectacle to White people, but so also is Black life.</p>
-    <p>On my best days in the predominantly White spaces I inhabit&mdash;whether it is the New England boarding school I left my home community to attend or the New England university I attend now&mdash;I feel like an exhibit in an exclusive, expensive museum. Except, I am missing the little white label that gives me context, that makes me comprehensible. On my worst days, I feel like a beast trapped in a zoo, a beast to be gawked at, a beast that somehow managed to learn how to perform humanity well enough to attend a university among White people who, no matter what the circumstances may be, are afforded humanity.</p>
-    <p>I don&rsquo;t remember the exact moment I realized that my New England private school had given me training rather than education&mdash;training to assimilate into a White corporate world that will never truly accept me. The romance of sending a Black girl to New England so she can chase opportunity fades when you realize the cost of that opportunity. The romance of <em>Beauty &amp; the Beast </em>quickly fades when you realize that Beauty could not have loved Beast without first training him, without teaching him how to hold a spoon, without teaching him how to ice skate, without teaching him to be more like her. The romance of <em>Beauty &amp; the Beast </em>fades when you realize that Disney slimly averts tragedy</p>
 
     <div id="black_life_title">
       <h1> The Spectacle of Black Life </h1>
       <h2> By Kriska Desir</h2>
     </div>
+    <br>
+    <p>My least favorite icebreaker is the one where you go around in a circle and share what superpower you would choose to develop if you could, what superhuman ability you would will into your existence if given the chance. I nearly always choose mindreading because, admittedly, never knowing what other people are thinking is the Anthony Davis in the NBA All-Star game of sources of my anxiety. Yet, I&rsquo;ve always found myself in icebreaker situations with people whose superpower of choice is invisibility. It&rsquo;s funny&mdash;invisibility is the superpower I never got to choose.</p>
+    <p>To be in my skin&mdash;to be a fat, mentally-ill, poor, Black woman&mdash;is to be both hypervisible and invisible, to be seen but never truly <em>seen</em>, never quite human, heard but never quite understood. It&rsquo;s not that I think all White people see me and see the demon that Darren Wilson saw when he murdered Michael Brown; it&rsquo;s more so that Black people in the liberal White imagination are still more enigma than human. Black people in the liberal White imagination are still the code that needs to be cracked, objects lost in translation. After the murder of Walter Scott, Brittany Cooper wrote about what she calls &ldquo;the spectacle of Black death,&rdquo; the cultural phenomenon of Black people nationwide scrolling through their Facebook friends&rsquo; vacation photos in the same breath as videos of Black people being slain in the street. Yet, I&rsquo;ve come to know that not only is Black death a spectacle to White people, but so also is Black life.</p>
+    <p>On my best days in the predominantly White spaces I inhabit&mdash;whether it is the New England boarding school I left my home community to attend or the New England university I attend now&mdash;I feel like an exhibit in an exclusive, expensive museum. Except, I am missing the little white label that gives me context, that makes me comprehensible. On my worst days, I feel like a beast trapped in a zoo, a beast to be gawked at, a beast that somehow managed to learn how to perform humanity well enough to attend a university among White people who, no matter what the circumstances may be, are afforded humanity.</p>
+    <p>I don&rsquo;t remember the exact moment I realized that my New England private school had given me training rather than education&mdash;training to assimilate into a White corporate world that will never truly accept me. The romance of sending a Black girl to New England so she can chase opportunity fades when you realize the cost of that opportunity. The romance of <em>Beauty &amp; the Beast </em>quickly fades when you realize that Beauty could not have loved Beast without first training him, without teaching him how to hold a spoon, without teaching him how to ice skate, without teaching him to be more like her. The romance of <em>Beauty &amp; the Beast </em>fades when you realize that Disney slimly averts tragedy</p>
 
     <p>through Beast&rsquo;s transformation into a handsome, European prince, Adam, just in the nick of time. The movie in which Beast does not remain Beast aborts his realization that he will never be like Belle. I wonder what happens in happily ever after one morning when Beast wakes up next to Belle and the realization that she will only ever see him as unhuman sinks in.</p>
     <p>On my worst days, I struggle to reconcile my pride in being the first person in my family to attend college with the shame that comes from being a symbol for my high school and university to use. It&rsquo;s a very particular shame to know that an institution can parade me around as if to say, <em>Look how well we trained it. Look how generous we are to have given it the opportunity to attend our school</em>. <em>Isn&rsquo;t it darling how it&rsquo;s learned to act just like us?</em> It&rsquo;s a very particular shame to know that the Black scholarship kid is symbol rather than human. To know that I serve to allude to diversity, to the changing times, to some hackneyed form of inclusion. To know that, on some level, I serve as a placeholder.</p>
@@ -855,7 +855,7 @@
     <div class="row">
       <div class="col-sm-4">
         <h1>a future, maybe</h1>
-        <h2>By Gabby Bonifiglio</h2>
+        <h2>By Gabby Bonfiglio</h2>
       </div>
       <div class="col-sm-8">
         <p>1. when someone asks who lives in your heart, you picture me in morning light, my hair (it is constantly growing in) splayed across the pillow. our bed is white, and fluffier than our paychecks allow. the light makes my hair gold among the brown, and you notice.</p>
@@ -867,7 +867,7 @@
     </div>
     <img src="images/bed.JPG" alt="photograph of a bed" >
   </section>
-  
+
 
   <!-- put credits including art here -->
   <section class="cd-section" id="parting">
@@ -884,7 +884,7 @@
       <br>
       <h1> Art Credits </h1>
       <ul>
-          <li> Cover: Eve Feldberg <li> 
+          <li> Cover: Eve Feldberg <li>
           <li> Letter From The Editor: Annie Roome</li>
           <li> The Spectacle of Black Life: Annie Roome</li>
           <li> Rain: Cecily Lo </li>
@@ -909,18 +909,18 @@
           <li> a future, maybe </li>
           <li> Parting shot: Kyle Scott </li>
       </ul>
-      <br> 
+      <br>
 
-      </div> 
-      </div> 
+      </div>
+      </div>
   </section>
 
-  <section class="cd_section" id="back_to_O"> 
-    <ul> 
+  <section class="cd_section" id="back_to_O">
+    <ul>
       <li class="back-to-observer">
        <i class="fa fa-hand-o-left" aria-hidden="true"></i>
         <a href="http://tuftsobserver.org">Back to the Observer</a>
-      </ul> 
+      </ul>
   </section>
 
   <!-- Javascript -->
