--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       <li>
         <a href="#dreams-allowed" data-number="21">
           <span class="cd-dot"></span>
-          <span class="cd-label">I'm allowed to have my dreams</span>
+          <span class="cd-label">I'm allowed to have dreams</span>
         </a>
       </li>
       <li>
@@ -209,8 +209,8 @@
           Big Chop</a><span class="author"> &mdash; Melanie Horton</span>
       </li>
       <li>
-        <a href="#mira-que">
-          Mira Que Te Quiso, Fue Por Tu Pelo</a><span class="author"> &mdash; Leticia Rocha</span>
+        <a href="#mira-que"> 
+         Mira Que Si Te Quise, Fue Por Tu Pelo</a><span class="author"> &mdash; Leticia Rocha</span>
       </li>
       <li>
         <a href="#blackberries">
@@ -266,7 +266,7 @@
       </li>
       <li>
         <a href="#dreams-allowed" >
-          I'm allowed to have my dreams</a><span class="author"> &mdash; Nazifa Noor Sarawat</span>
+          I'm allowed to have dreams</a><span class="author"> &mdash; Nazifa Noor Sarawat</span>
       </li>
       <li>
         <a href="#mother-glass" >
@@ -427,14 +427,14 @@
 
   <section class="cd-section" id="big-chop">
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-sm-7">
         <p>I was told <br/>it was too nappy <br/>too unprofessional <br/>too wild</p>
         <p>I had grown accustomed to<br/>people laughing<br/>at its dead ends <br/>and unwillingness to lie down</p>
         <p>No one told me <br/>that my hair was learning how to sing <br/>and that every time <br/>it faced the scalding relaxers <br/>and red-hot flat irons, <br/>I was erasing <br/>the tone of my hair’s voice <br/>its unrelenting texture <br/>its powerful volume</p>
         <p>Those scissors freed me <br/>as I watched the straight pieces fall away <br/>I began to love myself <br/>for everything I am <br/>for my afro that rises towards the sun <br/>for the strength to break combs <br/>for the power to revert back after being abused</p>
         <p>I am no longer drowning in the sea of white wishes, <br/>feeling weighed down by my Black gifts wrapped in gold</p>
       </div>
-      <div class="col-sm-6">
+      <div class="col-sm-5">
         <h1>Big Chop</h1>
         <h2>By Melanie Horton</h2>
         <img src="images/big-chop.jpg" alt="outline of a woman's hair"/>
@@ -446,7 +446,8 @@
   <section class="cd-section" id="mira-que">
     <div class="row">
       <div class="col-sm-6">
-        <h1>Mira Que Te Quiso, Fue Por Tu Pelo</h1>
+
+        <h1>Mira Que Si Te Quise, Fue Por Tu Pelo</h1>
         <h2>By Leticia Rocha</h2>
         <img src="images/big-chop3.jpg" alt="outline of a man's hair"/>
         <img src="images/big-chop4.jpg" alt="outline of a man's hair"/>
@@ -564,7 +565,7 @@
         <h2>By Anonymous</h2>
       </div>
       <p>i see my doctor, ask her about top surgery, ask her about bloodwork, ask her to raise my dose. these are decisions i made a long time ago that i thought i’d take my time with. there is no time anymore.<br>my doctor asks why i want my dose raised and i tell her i still get cramps. “for two years you’ve had cramps?” i nod. it’s not something i want to talk about. before i leave she remembers i’m almost 21, right? yes. well, soon i will have to decide between removing my uterus and getting pap smears. i do not want to remove my uterus. i do not want to get pap smears. i may not be a Woman but i am not ready to give up bearing a child. i know what the procedure entails but i look it up anyway when i get home. i cry.</p>
-      <p>no one has seen my body but me since i was very young. and it doesn’t feel right. i love it, but it doesn’t feel right. i love it, but there are things i want to change. i love it, but it took me a long time to love it and every day i worry that no one else has the time, or the patience. i  nally believe i am beautiful.</p>
+      <p>no one has seen my body but me since i was very young. and it doesn’t feel right. i love it, but it doesn’t feel right. i love it, but there are things i want to change. i love it, but it took me a long time to love it and every day i worry that no one else has the time, or the patience. i finally believe i am beautiful.</p>
       <p>only some days is that enough.</p>
     </div>
 
@@ -576,7 +577,7 @@
         </div>
         <br>
         <div class="column">
-          <p>i. it bothers me sometimes that there’s no place to go back to. bodies, tension, string. snap, snap,  ash, fuck, i never should have come here. you don’t know what it’s like to bathe in blood no one shares. to nurse my own diaspora. ma, forgive me for leaving you at home, my heart thinks of you and weeps, weeps, weeps. i am only a child, and i should have been a vessel. last week when i couldn’t sleep at night, sweat clouding my neck, i thought of you. you don’t know what it’s like to nurse my own diaspora. shoulder blades and dirty necks i had to nurse my own diaspora. i scrubbed the yellow out of my  ngernails. shoulder blades and dirty necks i had to nurse my own diaspora. ashed a cigarette on fresh snow and called it home.</p>
+          <p>i. it bothers me sometimes that there’s no place to go back to. bodies, tension, string. snap, snap,  ash, fuck, i never should have come here. you don’t know what it’s like to bathe in blood no one shares. to nurse my own diaspora. ma, forgive me for leaving you at home, my heart thinks of you and weeps, weeps, weeps. i am only a child, and i should have been a vessel. last week when i couldn’t sleep at night, sweat clouding my neck, i thought of you. you don’t know what it’s like to nurse my own diaspora. shoulder blades and dirty necks i had to nurse my own diaspora. i scrubbed the yellow out of my fingernails. shoulder blades and dirty necks i had to nurse my own diaspora. ashed a cigarette on fresh snow and called it home.</p>
           <p>ii. it bothers me sometimes that there’s no place to go back to. horizons in limbo. she looks at me and holds my heart in her eyes and she looks so gentle i feel my heart slow and then weep. shoulder blades and dirty necks and an expired time sheet. god saw me turn orange and i knelt in front of her. i couldn’t tell if it was sandpaper or her tongue but i bled anyway. he plunged his fingers into me and i wondered why i even bothered. he plunged his fingers into me and i felt her hand brush against mine. it was an accident but she looked at me and my hair grew heavy, fuck, fuck, there’s no going back.</p>
         </div>
       </div>
@@ -768,7 +769,7 @@
 
   <section class="cd-section" id ="dreams-allowed">
     <div class="inner-text">
-      <h1>I'm allowed to have my dreams</h1>
+      <h1>I'm allowed to have dreams</h1>
       <h2>By Nazifa Noor Sarawat</h2>
       <p>
         We talk about how I&rsquo;m doing and our eyes avoid each other&rsquo;s.<br>
@@ -892,7 +893,7 @@
           <li> Etsi Udiditlv // Our Lost Mother: Liza Leonard</li>
           <li> Big Chop: Lily Pisano</li>
           <li> Blackberries & Brown Sugar: Annie Roome</li>
-          <li> Mary's Grandbaby (something like a goodbye for my grandmother): Annie Roome</li>
+          <li> Mary's Grandbaby (something like a goodbye for my grandmother): Madeline Lee</li>
           <li> Fault Line Swell: Nicole Cohen</li>
           <li> Star Ferry: Emily Ng</li>
           <li> i don’t feel trapped anymore but i still don’t feel free:  Nina Hofkosh-Hulbert</li>
@@ -902,11 +903,11 @@
           <li> You Can Keep Your Love: Rachel Cunnigham</li>
           <li> For Colored Women: Judy Chen & Ana-Maria Murphy-Texidor</li>
           <li> A Guide to Helping Depressed Parents: Judy Chen</li>
-          <li> Unmasked Friend: Cecily Los </li>
+          <li> Unmasked Friend: Cecily Lo </li>
           <li> mother: Nicole Cohen </li>
           <li> I'm allowed to have dreams: Jacqueline Enderle </li>
           <li> Mother's Glass: Abigail Barton</li>
-          <li> a future, maybe </li>
+          <li> a future, maybe: Abigail Barton</li>
           <li> Parting shot: Kyle Scott </li>
       </ul>
       <br>
